# nadir-nerf-method

./: README.md  pyproject.toml
nadir_nerf/: nadir_config.py  nadir_datamanager.py  nadir_field.py  nadir_model.py  nadir_pipeline.py
