[project]
name = "nerfstudio-nadir-nerf"
version = "0.1.0"

dependencies = ["nerfstudio >= 0.3.0"] 

[tool.setuptools.packages.find]
include = ["nadir_nerf*"]

# register the entry point of your new method here:
[project.entry-points.'nerfstudio.method_configs']
nadir-nerf = 'nadir_nerf.nadir_config:nadir_nerf'
